# LTC_readiness_app

./: CMakeLists.txt  README.md  build_release.bat
data/: ltc_survey_readiness.dbtxt
src/: main.cpp
src/core/: App.cpp  App.h
src/models/: Models.h
src/services/: DataStore.cpp  DataStore.h
src/ui/: MainWindow.cpp  MainWindow.h
